# reasoning

./: .env.example  .gitignore  Evaluation_1.md  PROJECT_OVERVIEW.md  README.md  plan.md  pyproject.toml
configs/: dpo_clean.yaml  dpo_mixed.yaml  dpo_padded_heavy.yaml  dpo_padded_mild.yaml  sft_baseline.yaml
models/dpo-clean/: README.md  config.yaml
models/dpo-clean/checkpoint-500/: README.md  scheduler.pt  (+1 more)
models/dpo-mixed/: README.md  config.yaml
models/dpo-padded-heavy/: README.md  config.yaml
models/dpo-padded-heavy-5ep/: README.md  config.yaml
models/dpo-padded-mild/: README.md  adapter_config.json  config.yaml
models/sft-baseline/: README.md  config.yaml
results/: dpo-clean_results.json  dpo-mixed_results.json  dpo-padded-heavy-5ep_results.json  dpo-padded-heavy_results.json  dpo-padded-mild_results.json  sft-baseline_results.json
results_rescored/: dpo-clean_results.json  dpo-mixed_results.json  dpo-padded-heavy_results.json  dpo-padded-mild_results.json  sft-baseline_results.json
scripts/: analyze.py  create_pairs.py  data_prep.py  evaluate.py  rescore_results.py  train_dpo.py  train_sft.py
src/: __init__.py  config.py  data_utils.py  filler_injection.py  metrics.py  plotting.py
wandb/: latest-run
wandb/run-20260203_120707-8qe9y3zd/: run-8qe9y3zd.wandb
wandb/run-20260203_125337-00l81g34/: run-00l81g34.wandb
wandb/run-20260203_133328-1gb3o6vz/: run-1gb3o6vz.wandb
wandb/run-20260203_140054-c0b9deml/: run-c0b9deml.wandb
wandb/run-20260203_143549-uvgolc3p/: run-uvgolc3p.wandb
wandb/run-20260204_102030-f7rc2j7u/: run-f7rc2j7u.wandb
(+59 files in other folders)
